welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
		} else if(getDirection == Direction.WEST) {
                       ^